# pythonsul2022-site

./: Abertura.html  CNAME  abertura-1.html  almoco-1.html  almoco-2.html  almoco.html  archives.html  authors.html  categories.html  coffe-1-1.html  coffe-1-2.html  coffe-2-1.html  coffe-2-2.html  coffe1.html  coffe2.html  credenciamento.html  encerramento-1.html  encerramento-2.html  encerramento.html  index.html  keynote-adriano-margarin.html  keynote-eduardo-mendes.html  keynote-julia-tessler.html  keynote-paula-grangeiro.html  keynote.html  lightningtalk-1.html  lightningtalk-2.html  lightningtalk.html  palestra-1-1.html  palestra-1-2.html  palestra-1-3.html  palestra-1-4.html  palestra-1-5.html  palestra-1-6.html  palestra-1-7.html  palestra-1-8.html  palestra-2-1.html  palestra-2-2.html  palestra-2-3.html  palestra-2-4.html  (+20 more)
author/: adriano-margarin.html  beemon.html  bruna-ferreira.html  bruno-luvizotto-carli.html  camilo-de-azevedo.html  cesar-smaniotto-junior.html  eduardo-kohler-e-pedro-simas-neto.html  eduardo-mendes.html  filipe-cifali.html  franco-gonzalez.html  gabriel-taufer.html  guionardo-furlan.html  host.html  julia-tessler.html  leonardo-lovatto-biasuz.html  lucas-cezimbra.html  lucas-eduardo-abreu-silva.html  lucas-soranzo.html  lucas-torresan.html  mateus-oliveira.html  organizacao.html  paula-grangeiro.html  pedro-henrique-de-assumpcao.html  perceu-bertoletti.html  python-sul.html  ramiro-batista-da-luz.html  ramiro-luz.html  renzo-nuccitelli.html  tyrone-damasceno.html
category/: horarios.html  keynotes.html  tutoriais.html
feeds/: all.atom.xml  (+3 more)
(+44 files in other folders)
